--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -21,32 +21,8 @@ ul {
 		width: 95%;
 		margin: 0 auto;
 		background-color: #ccc;
-		#navigation {
-			width: 70%;
-			padding: 1em;
-			padding-bottom: 0;
-			margin: 0 auto;
-			#logo {
-				display: inline-block;
-				width: 10%;
-				img {
-					max-width: 100px;
-					width: 100%;
-				}
-			}
-			#gnavi {
-				display: inline-block;
-				width: 60%;
-				text-align: center;
-				ul {
-					padding: 0;
-					li {
-						display: inline-block;
-						width: 20%;
-						margin-right: 1em;
-					}
-				}
-			}
+		#gnavi {
+			background-color: orange;
 		}
 		#main-image {
 			margin: 0 auto;
@@ -58,27 +34,18 @@ ul {
 			}
 		}
 	}
-	#main-col {
+	#main-area {
 		width: 95%;
 		margin: 0 auto;
-		#sidebar {
-			background-color: orange;
-			width: 15%;
-			float: right;
+		background-color: green;
+		#page-info {
+			padding: 0.5em;
 		}
-		#main {
-			background-color: green;
-			width: 85%;
-			float: right;
-			.page-info {
-				padding: 0.5em;
-			}
-			.content {
-				padding: 0.5em;
-				img {
-					max-width: 210px;
-					width: 100%;
-				}
+		#content {
+			padding: 0.5em;
+			img {
+				max-width: 210px;
+				width: 100%;
 			}
 		}
 	}
