--- a/style.css
+++ b/style.css
@@ -12,27 +12,8 @@ h1 {
     width: 95%;
     margin: 0 auto;
     background-color: #ccc; }
-    #container #header #navigation {
-      width: 70%;
-      padding: 1em;
-      padding-bottom: 0;
-      margin: 0 auto; }
-      #container #header #navigation #logo {
-        display: inline-block;
-        width: 10%; }
-        #container #header #navigation #logo img {
-          max-width: 100px;
-          width: 100%; }
-      #container #header #navigation #gnavi {
-        display: inline-block;
-        width: 60%;
-        text-align: center; }
-        #container #header #navigation #gnavi ul {
-          padding: 0; }
-          #container #header #navigation #gnavi ul li {
-            display: inline-block;
-            width: 20%;
-            margin-right: 1em; }
+    #container #header #gnavi {
+      background-color: orange; }
     #container #header #main-image {
       margin: 0 auto;
       text-align: center;
@@ -40,24 +21,17 @@ h1 {
       padding-bottom: 1em; }
       #container #header #main-image img {
         width: 100%; }
-  #container #main-col {
+  #container #main-area {
     width: 95%;
-    margin: 0 auto; }
-    #container #main-col #sidebar {
-      background-color: orange;
-      width: 15%;
-      float: right; }
-    #container #main-col #main {
-      background-color: green;
-      width: 85%;
-      float: right; }
-      #container #main-col #main .page-info {
-        padding: 0.5em; }
-      #container #main-col #main .content {
-        padding: 0.5em; }
-        #container #main-col #main .content img {
-          max-width: 210px;
-          width: 100%; }
+    margin: 0 auto;
+    background-color: green; }
+    #container #main-area #page-info {
+      padding: 0.5em; }
+    #container #main-area #content {
+      padding: 0.5em; }
+      #container #main-area #content img {
+        max-width: 210px;
+        width: 100%; }
   #container #footer {
     background-color: red; }
     #container #footer p {
