--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -1,16 +1,8 @@
 body {
 	margin: 0;
 }
-h1 {
+h1,h2,p {
 	margin: 0;
-}
-h2 {
-
-}
-p {
-	margin:0;
-}
-ul {
 }
 
 #container {
@@ -27,10 +19,7 @@ ul {
 		}
 	}
 	#main-image {
-			margin: 0 auto;
-			text-align: center;
 			width: 100%;
-			display: block;
 			padding-bottom: 1em;
 			img {
 			width: 100%;
