--- a/style.css
+++ b/style.css
@@ -1,10 +1,7 @@
 body {
   margin: 0; }
 
-h1 {
-  margin: 0; }
-
-p {
+h1, h2, p {
   margin: 0; }
 
 #container {
@@ -19,10 +16,7 @@ p {
     #container #header #gnavi {
       background-color: orange; }
   #container #main-image {
-    margin: 0 auto;
-    text-align: center;
     width: 100%;
-    display: block;
     padding-bottom: 1em; }
     #container #main-image img {
       width: 100%; }
