Gナビ仮組み
Gナビのデザインを仮組み

--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -16,6 +16,10 @@ h1,h2,p {
 		background-color: #ccc;
 		#gnavi {
 			background-color: orange;
+			text-align:center;
+			> div {
+				display: inline-block;
+			}
 		}
 	}
 	#main-image {
