--- a/style.css
+++ b/style.css
@@ -14,7 +14,10 @@ h1, h2, p {
     margin: 0 auto;
     background-color: #ccc; }
     #container #header #gnavi {
-      background-color: orange; }
+      background-color: orange;
+      text-align: center; }
+      #container #header #gnavi > div {
+        display: inline-block; }
   #container #main-image {
     width: 100%;
     padding-bottom: 1em; }
