--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -10,15 +10,25 @@ h1,h2,p {
 	margin: 0 auto;
 	background-color: yellow;
 	#header {
-		padding: 1em 0;
 		width: 100%;
-		margin: 0 auto;
-		background-color: #ccc;
 		#gnavi {
 			background-color: orange;
 			text-align:center;
 			> div {
 				display: inline-block;
+				ul {
+					padding: 0 1em;
+					li {
+						display: inline-block;
+						padding: 0 1em;
+					}
+				}
+			}
+			#logo {
+				padding: 1em 0;
+				img {
+					max-width: 120px;
+				}
 			}
 		}
 	}
