トップページコンテンツの仮組み
ダミーテキストを挿入

--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -5,6 +5,14 @@ h1,h2,p {
 	margin: 0;
 }
 
+h1 {
+	text-align: center;
+}
+h2 {
+	font-weight: normal;
+	text-align: center;
+}
+
 #container {
 	width: 100%;
 	margin: 0 auto;
