--- a/style.css
+++ b/style.css
@@ -4,6 +4,13 @@ body {
 h1, h2, p {
   margin: 0; }
 
+h1 {
+  text-align: center; }
+
+h2 {
+  font-weight: normal;
+  text-align: center; }
+
 #container {
   width: 100%;
   margin: 0 auto;
