メインエリアの幅・余白調整
widthを95%→90%、paddingをつけた

--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -48,7 +48,8 @@ h2 {
 		}
 	}
 	#main-area {
-		width: 95%;
+		width: 90%;
+		padding: 1em;
 		margin: 0 auto;
 		background-color: green;
 		#page-info {
