--- a/style.css
+++ b/style.css
@@ -32,14 +32,13 @@ h2 {
         #container #header #gnavi #logo img {
           max-width: 120px; }
   #container #main-image {
-    width: 100%;
-    padding-bottom: 1em; }
+    width: 100%; }
     #container #main-image img {
       width: 100%; }
   #container #main-area {
     width: 90%;
     padding: 1em;
-    margin: 0 auto;
+    margin: 1em auto 0;
     background-color: green; }
     #container #main-area #page-info {
       padding: 0.5em; }
