ヘッダーの余白調整
marginをつけた

--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -19,6 +19,7 @@ h2 {
 	background-color: yellow;
 	#header {
 		width: 100%;
+		margin-bottom: 1em;
 		#gnavi {
 			background-color: orange;
 			text-align:center;
