--- a/style.css
+++ b/style.css
@@ -28,7 +28,8 @@ h2 {
   margin: 0 auto;
   background-color: yellow; }
   #container #header {
-    width: 100%; }
+    width: 100%;
+    margin-bottom: 1em; }
     #container #header #gnavi {
       background-color: orange;
       text-align: center; }
