--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -43,8 +43,9 @@ h2 {
 	}
 	#main-image {
 			width: 100%;
-			img {
-			width: 100%;
+			.slide-show {
+			width: 60%;
+			margin: 0 auto;
 		}
 	}
 	#main-area {
