--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,4 +1,8 @@
 @charset 'utf-8';
 
+@import "color";
 @import "general";
-@import 'main';
+@import "tags";
+@import "forms";
+@import "slick";
+@import "main";
